--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.456.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
