--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.28.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
